--- a/META.yml
+++ b/META.yml
@@ -17,11 +17,13 @@ no_index:
     - inc
     - t
     - xt
+    - example
 requires:
+  Test::More: '0.99'
   XXX: '0'
   perl: v5.8.1
 resources:
   bugtracker: https://github.com/ingydotnet/testml-tiny-pm/issues
   homepage: https://github.com/ingydotnet/testml-tiny-pm
   repository: https://github.com/ingydotnet/testml-tiny-pm.git
-version: 0.0.3
+version: 0.0.4
